--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "3.3.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^7.0.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "eslint": "^8.38.0",
